# SRIJAN

./: CMakeLists.txt  capture.cpp  condenser.cpp  filter.cpp  logger.cpp  main.cpp  titan_amsi.h  titan_amsi_config.json
APPLCAIONT LOG ENDPOINT/: app.manifest  applog_decoder.cpp  applog_decoder.h  applog_etw_collector.cpp  applog_etw_collector.h  applog_event_subscriber.cpp  applog_event_subscriber.h  applog_logger.cpp  applog_logger.h  applog_monitor.cpp  applog_monitor.h  applog_watchlist.cpp  applog_watchlist.h  main_test.cpp  titan_pch.h
FILE ENDPOINT/: _file_scope.h  file_etw_collector.cpp  file_etw_collector.h  file_logger.cpp  file_logger.h  file_monitor.cpp  file_monitor.h  file_processor.cpp  file_processor.h  file_tracker.cpp  file_tracker.h  fim_events.json  main_file_test.cpp
NETOWRK ENDPOINT/: Agent.cpp  Agent.h  CMakeLists.txt  Event.cpp  Event.h  Filter.cpp  Filter.h  logger.cpp  logger.h  main.cpp  network_capture.cpp  network_capture.h  network_monitor.cpp  network_monitor.h  network_types.h
correalator/: Titan dashboard.html  c.py  correlated_events new.json  final_threat_alerts.json  hybrid_model_components.pkl  run_c_file.bat  run_full_demo.bat  run_sentinel_ai.bat  sentinel_ai_brain.py
correalator/backend/: analyzer.py  app.py  graph_builder.py  run_analyzer.py  threat_intel.py
correalator/frontend/: index.html
master/: CMakeLists.txt  Launch_Layer1.bat  dashboard.cpp  titan_applog.json
master/logs/: fim_events.json  titan_20260323_213613.jsonl  titan_20260323_213852.jsonl  titan_20260323_221007.jsonl  titan_20260323_221650.jsonl  titan_20260323_221816.jsonl  titan_20260323_224903.jsonl  titan_20260324_154349.jsonl  titan_20260326_153450.jsonl  titan_20260326_153451.jsonl  titan_20260326_222516.jsonl  titan_20260326_222517.jsonl  titan_20260326_232704.jsonl  titan_20260326_232705.jsonl  titan_20260327_161416.jsonl  titan_20260327_162853.jsonl  titan_20260327_162854.jsonl  usb_test.json
src_usb/: CMakeLists.txt  test_main.cpp  usb_identity.cpp  usb_identity.h  usb_kernel_listener.cpp  usb_kernel_listener.h  usb_logger.cpp  usb_logger.h  usb_monitor.cpp  usb_monitor.h  usb_session.cpp  usb_session.h  usb_session_manager.cpp  usb_session_manager.h  usb_watcher.cpp  usb_watcher.h
titan_fixed/titan_fixed/: CMakeLists.txt  agent.cpp  agent.h  event.cpp  event.h  filter.cpp  filter.h  logger.cpp  logger.h  main.cpp  process_monitor.cpp  process_monitor.h
